gcc/testsuite/rust/rustc/ui/issues/issue-44021.rs
struct MyStruct;
impl MyStruct {
    fn f() {|x, y} // { dg-error "" "" { target *-*-* } }
}

fn main() {}

